# erc3-agent

./: .gitignore  README.MD  dev.ipynb  pyproject.toml
sgr-agent-erc3/: agent.py  main.py
sgr-agent-erc3-test/: agent.py  lib.py  main.py  requirements.txt
sgr-agent-erc32/: requirements.txt  store_agent.py
sgr-agent-store/: main.py  store_agent.py
