[project]
name = "erc3-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "erc3>=1.2.0",
    "google-genai>=1.56.0",
    "notebook>=7.5.1",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
]

[[tool.uv.index]]
url = "https://erc.timetoact-group.at/"
